# messaging_system

./: .clang-format  .cppcheck  .cppcheck-ignore  .gitignore  .gitmodules  .markdownlint.json  BUILD_TEST_RESULTS.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  README_BUILD.md  README_CPPCHECK.md  README_LINTING.md  STRUCTURE_IMPROVEMENTS.md  VALIDATION_REPORT.md  _r_e_a_d_m_e_8md.html  adaptive__job__queue_8cpp.html  adaptive__job__queue_8cpp.js  adaptive__job__queue_8cpp_source.html  adaptive__job__queue_8h.html  adaptive__job__queue_8h.js  adaptive__job__queue_8h_source.html  adaptive__typed__job__queue_8cpp.html  adaptive__typed__job__queue_8cpp.js  adaptive__typed__job__queue_8cpp_source.html  adaptive__typed__job__queue_8h.html  adaptive__typed__job__queue_8h.js  adaptive__typed__job__queue_8h_source.html  adaptive__typed__job__queue_8tpp.html  adaptive__typed__job__queue_8tpp_source.html  annotated.html  annotated_dup.js  asio__compat_8h.html  asio__compat_8h_source.html  bool__value_8cpp.html  (+4123 more)
application_layer/: CMakeLists.txt  README.md
application_layer/python_bindings/: messaging_python.cpp
application_layer/samples/: CMakeLists.txt  basic_usage_example.cpp  chat_server.cpp  distributed_worker.cpp  event_pipeline.cpp  iot_monitoring.cpp  message_bus_benchmark.cpp  messaging_config.ini  microservices_orchestrator.cpp  production_ready_example.cpp
concurrency/: job.cpp  (+9 more)
container/: CMakeLists.txt  container.cpp  container.h  container.i  container.py  container.vcxproj  container_wrap.cxx  value.cpp  value.h  value_types.cpp  value_types.h
container/core/: container.cpp  container.h  value.cpp  value.h
container/internal/: simd_processor.cpp  simd_processor.h  thread_safe_container.cpp  thread_safe_container.h  variant_value.cpp  variant_value.h
container/values/: bool_value.cpp  bool_value.h  bytes_value.cpp  bytes_value.h  container_value.cpp  container_value.h  double_value.cpp  double_value.h  float_value.cpp  float_value.h  int_value.cpp  int_value.h  llong_value.cpp  llong_value.h  long_value.cpp  long_value.h  numeric_value.h  numeric_value.tpp  short_value.cpp  short_value.h  string_value.cpp  string_value.h  uint_value.cpp  uint_value.h  ullong_value.cpp  ullong_value.h  ulong_value.cpp  ulong_value.h  ushort_value.cpp  ushort_value.h
cpp_libraries/container/: CMakeLists.txt  container.cpp  container.h  container.vcxproj  container.vcxproj.filters  value.cpp  value.h  value_types.cpp  value_types.h
cpp_libraries/database/: CMakeLists.txt  database.h  database_manager.cpp  database_manager.h  database_types.h  postgre_manager.cpp  postgre_manager.h  postgres_manager.cpp  postgres_manager.h
cpp_libraries/network/: CMakeLists.txt  constexpr_string.h  data_handling.cpp  data_handling.h  data_modes.h  messaging_client.cpp  messaging_client.h  messaging_server.cpp  messaging_server.h  messaging_session.cpp  messaging_session.h  network.vcxproj  network.vcxproj.filters  session_types.h
cpp_libraries/threads/: CMakeLists.txt  job.cpp  job.h  job_pool.cpp  job_pool.h  messaging_client.cpp  messaging_session.cpp  thread_pool.cpp  thread_pool.h  thread_worker.cpp  thread_worker.h  threads.vcxproj  threads.vcxproj.filters
cpp_samples/compression_sample/: CMakeLists.txt  compression_sample.cpp
cpp_samples/container_sample/: CMakeLists.txt  README.md  container_sample.cpp  container_sample.vcxproj
cpp_samples/decompression_sample/: CMakeLists.txt  decompression_sample.cpp
cpp_samples/restapi_client_sample/: CMakeLists.txt  restapi_client_sample.cpp  (+2 more)
database/: CMakeLists.txt  README.md  database.h  database.i  database.py  database_base.h  database_manager.cpp  database_manager.h  database_types.h  database_wrap.cxx  postgres_manager.cpp  postgres_manager.h
examples/: CMakeLists.txt  basic_messaging.cpp  unified_messaging_example.cpp
integration_tests/: CMakeLists.txt  test_backend_integration.cpp  test_container_serialization.cpp  test_distributed_messaging.cpp  test_event_bus_integration.cpp  test_full_integration.cpp  test_message_bus_router.cpp  test_messaging_patterns_e2e.cpp  test_priority_queue.cpp
monitoring_system/: .gitignore  CHANGELOG.md  CMakeLists.txt
network/: CMakeLists.txt  README.md  common_defs.h  connection_conditions.h  constexpr_string.h  data_handling.cpp  data_handling.h  data_lengths.h  data_modes.h  messaging_client.cpp  messaging_client.h  messaging_server.cpp  messaging_server.h  messaging_session.cpp  messaging_session.h  network.h  network.i  network.py  network.vcxproj  network.vcxproj.filters  network_wrap.cxx  packet_parser.cpp  packet_parser.h  pipeline.cpp  pipeline.h  send_coroutine.cpp  send_coroutine.h  session_types.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h  tcp_socket.cpp  tcp_socket.h
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py  test_interop.py
samples/: CMakeLists.txt  README.md
services/: CMakeLists.txt  README.md
test/: CMakeLists.txt
threads/: CMakeLists.txt  job.cpp  job.h  job_pool.cpp  job_pool.h  job_priorities.h  thread_pool.cpp  thread_pool.h  thread_worker.cpp  thread_worker.h  threads.i  threads.py  threads.vcxproj  threads_wrap.cxx
unittest/: CMakeLists.txt  README.md  container.cpp  container_test.cpp  container_thread_safe_test.cpp  database_test.cpp  integration_test.cpp  network.cpp  network_test.cpp  threads.cpp  utilities.cpp  variant_container_test.cpp  variant_test.cpp
utilities/: CMakeLists.txt  argument_parser.cpp  argument_parser.h  argument_parsing.cpp  argument_parsing.h  binary_combiner.cpp  binary_combiner.h  compressing.cpp  compressing.h  compressor.cpp  compressor.h  converting.cpp  converting.h  datetime_handler.cpp  datetime_handler.h  encrypting.cpp  encrypting.h  file_handler.cpp  file_handler.h  file_handling.cpp  file_handling.h  folder_handler.cpp  folder_handler.h  logging.cpp  logging.h  logging_level.h  utilities.i  utilities.py  utilities.vcxproj  utilities.vcxproj.filters  utilities_wrap.cxx
(+11971 files in other folders)
